<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.secondfloor.ofertame.activity.ProdutoActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/btnRatingProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/ratingProduto"
        android:text="@string/txtBtnRatingProduto" />

    <RatingBar
        android:id="@+id/ratingProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnRatingProduto"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/lblRatingProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ratingProduto"
        android:layout_alignLeft="@+id/ratingProduto"
        android:text="@string/txtRatingProduto"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblPrecoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/txtPrecoProduto"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lblNomeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="30dp"
        android:text="@string/txtNomeProduto"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblDescricaoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblNomeProduto"
        android:layout_below="@+id/lblNomeProduto"
        android:layout_marginTop="26dp"
        android:text="@string/txtDescProduto"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblRefProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ratingProduto"
        android:layout_alignTop="@+id/lblPrecoProduto"
        android:layout_marginRight="34dp"
        android:text="@string/txtRefProduto"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/lblDetalhesVendedor"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblRatingProduto"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/lblRatingProduto"
        android:layout_marginBottom="18dp"
        android:text="@string/txtDetalhesVendedor" />

</RelativeLayout>