<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
>

    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
     >
        
    	<EditText
    	    android:id="@+id/etEmail"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:drawableLeft="@drawable/email"
    	    android:hint="@string/txtEmail"
    	    android:inputType="textEmailAddress"
    	    android:padding="10dp"
    	    android:textColorHint="#bbbbbb" />

    	<EditText
    	    android:id="@+id/etUserName"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginTop="-2dp"
    	    android:background="@drawable/edittext_default_bg"
    	    android:drawableLeft="@drawable/user"
    	    android:hint="@string/txtNomeUsario"
    	    android:inputType="text"
    	    android:padding="10dp"
    	    android:textColorHint="#bbbbbb" />

    	<EditText
    	    android:id="@+id/etPass"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginTop="-2dp"
    	    android:autoText="false"
    	    android:background="@drawable/edittext_bottom_bg"
    	    android:drawableLeft="@drawable/password"
    	    android:editable="false"
    	    android:hint="@string/txtSenha"
    	    android:inputType="textWebPassword"
    	    android:padding="10dp"
    	    android:password="false"
    	    android:singleLine="false"
    	    android:textColorHint="#bbbbbb" />

        <Button
            android:id="@+id/btnSingUp"
            style="@style/DefaultButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/button_default_bg"
            android:padding="10dp"
            android:text="@string/txtCadastrar" />

        </LinearLayout>

</RelativeLayout>
