<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/entrada"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.secondfloor.ofertame.activity.MainActivity" >

  <LinearLayout 
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/linearlayout_bg"
        android:padding="10dp"
        >
        
    	<Button
    	    android:id="@+id/btnFb"
    	    style="@style/ButtonText"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_margin="4dp"
    	    android:background="@drawable/layers_fb_button_bg"
    	    android:onClick="loginFacebook"
    	    android:paddingBottom="10dp"
    	    android:paddingLeft="30dp"
    	    android:paddingRight="10dp"
    	    android:paddingTop="10dp"
    	    android:text="@string/txtLoginFacebook" />
      
         <Button
             android:id="@+id/btnSignUp"
             style="@style/DefaultButtonText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:background="@drawable/button_default_bg"
             android:padding="10dp"
             android:text="@string/txtCriarConta" />

        <Button
            android:id="@+id/btnSingIn"
            style="@style/DefaultButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/button_default_bg"
            android:padding="10dp"
            android:text="@string/txtEntrar" />

        </LinearLayout>

</RelativeLayout>
